--- a/int.html
+++ b/int.html
@@ -197,7 +197,7 @@
             <p>Veuillez sélectionner votre appareil pour continuer :</p>
             <div class="options">
                 <div class="device-selection">
-                    <a href="pc-version.html" class="device-btn">
+                    <a href="https://adr-mp.github.io/accueil/acc.html" class="device-btn">
                         <img src="ss.jpg" alt="Version PC">
                         Version PC
                     </a>
